# FirstDjangoProject

mysite/mysite/: settings.py
mysite/requestdataapp/: urls.py  views.py
mysite/requestdataapp/templates/requestdataapp/: request-query-params.html
mysite/shopapp/: models.py  urls.py  views.py
mysite/shopapp/management/commands/: create_order.py  create_products.py
mysite/shopapp/migrations/: 0001_initial.py  0002_order.py  0003_order_user.py
mysite/shopapp/templates/shopapp/: base.html  products-list.html  shop-index.html
prod/: .env.template  Dockerfile  docker-compose.yaml  pyproject.toml
prod/mysite/mysite/: settings.py
prod/mysite/shopapp/: forms.py
