[project]
name = "prod"
version = "0.1.0"
description = ""
authors = [
    {name = "Ivan Ivanov",email = "ivanov72715@mail.ru"}
]
package-mode = false

requires-python = ">=3.12"
dependencies = [
    "django (>=5.2,<6.0)",
    "django-rest-framework (>=0.1.0,<0.2.0)",
    "django-filter (>=25.1,<26.0)",
    "django-debug-toolbar (>=5.2.0,<6.0.0)",
    "pillow (>=11.2.1,<12.0.0)",
    "pytz (>=2025.2,<2026.0)",
    "sqlparse (>=0.5.3,<0.6.0)",
    "asgiref (>=3.8.1,<4.0.0)",
    "gunicorn (>=23.0.0,<24.0.0)"
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"

